# avc-parser

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLI_REFERENCE.md  EXAMPLES.md  FEATURE_DECISIONS.md  Makefile  README.md  ROADMAP.md  avc-parser-course.html  avc-parser.1  avc-parser.spec  code_fixer.py  config.py  dev-requirements.txt  models.py  parse_avc.py  performance_profile_20250929_174541.json  performance_profile_20250929_174757.json  pyproject.toml  requirements.txt  run_checks.py  run_tests.py  setup.py  test_normalizations.py  utils.py
analyzers/: __init__.py  boot_impact.py  findings.py  labeling.py  patterns.py  recurrence.py  relabeling.py
avc_selinux/: __init__.py  context.py  mls.py
completions/: avc-parser.bash  avc-parser.zsh
config/: __init__.py  constants.py
detectors/: __init__.py  anomaly_detector.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CLI_REFERENCE.md  DEDUPLICATION_ALGORITHM.md  EXAMPLES.md  FEATURE_DECISIONS.md  INTEGRATION_ROADMAP.md  README.md  ROADMAP.md  SOS_CLI_INTEGRATION.md  SOS_INTEGRATION.md  WRAPPER_EXPLANATION.md
examples/: README.md  basic_analysis.py  batch_processing.py  json_integration.py  performance_test.py  security_report.py  sos_integration_demo.py
formatters/: __init__.py  json_formatter.py  report_formatter.py  stats_formatter.py
scripts/: README.md  generate_test_data.py  profile_performance.py  syntax_check.py  validate_logs.py
selinux/: __init__.py  avc_analyzer.py  context.py  selinux_analyzer.py
tests/: README.md  test_analyzers.py  test_core_functions.py  test_core_parsing.py  test_coverage_summary.md  test_display_layer.py  test_edge_cases.py  test_integration.py  test_malformed_logs.py  test_mls.py  test_parse_avc.py  test_regression.py  test_runner.py  test_timestamp_tracking.py  test_validation_functions.py  test_verbose_stats.py
utils/: __init__.py  file_utils.py  legacy.py  pattern_utils.py  selinux_utils.py  sort_utils.py  time_utils.py
(+3 files in other folders)
